--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^7.6.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
