--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
