--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.9",
+    "lodash.debounce": "^4.0.8",
     "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
